--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<h1>Teste2</h1>
+<html>
+
+<body>
+    <script type="text/javascript">
+        function funcao(input) {
+            var valor = input.value;
+            if (valor == "69-85-84-69-65-77-79"){
+                alert("Sucesso");
+            }else{
+                alert("Chave de autenticação não existe nos servidores.");
+            }
+            
+        } 
+    </script>
+    <h1>Helllo</h1>
+    <form id="formulario">
+        <input type="text" id="campo">
+        <input type="submit" value="Enviar" onclick="funcao(campo)">
+    </form>
+</body>
+
+</html>
